CMAKE_MINIMUM_REQUIRED(VERSION 3.30)
PROJECT(hrfile_hdf5_converter C)
SET(CMAKE_C_STANDARD 23)
ADD_EXECUTABLE(hrfile_hdf5_converter main.c)
SET(TARGET "hrfile_hdf5_converter")

# HDF5
FIND_PACKAGE(HDF5 REQUIRED COMPONENTS C)
# HDF5 INCLUDE
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${HDF5_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${TARGET} ${HDF5_C_LIBRARIES})
